# smartinventory

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: dockerfile  manage.py
backend/apps/inventory/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: views.py
backend/smartinventory/: asgi.py  urls.py  wsgi.py
backend/smartinventory/settings/: base.py  dev.py  prod.py
